# picoLCD

./: .gitignore  CHANGELOG.md  FUNCTIONS.md  LICENSE  README.md
8-bit/: CMakeLists.txt  LCDops.c  LCDops.h  generalOps.c  generalOps.h  main.c  presetChars.c  presetChars.h
8-bit/example/: CMakeLists.txt  LCDops.c  LCDops.h  generalOps.c  main.c  presetMessages.c  presetMessages.h
demos/20x4/: customChars.uf2
demos/20x4/src/customChars/: main.c
demos/40x2/: demoText.uf2
demos/40x2/src/demoText/: main.c
